--- a/PAGES/02c_scalars/index.html
+++ b/PAGES/02c_scalars/index.html
@@ -2827,11 +2827,11 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Numbers</h2></p>
 <p>Computers store numbers in different formats, treating integers and decimal numbers as separate entities. Even within the same category of numbers, multiple representations emerge, depending on the intended level of precision. This precision is determined by the number of bits allocated in memory to store it, which in turn defines the maximum range of values supported by a data type. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For instance, the so-called 8-bit integer is limited to representing values between –128 to 127. Likewise, a 32-bit floating-point number, which is used for decimal numbers, can represent up to 7 significant digits of precision.  </span></span> The features described extend well beyond Julia, and are intrinsic to how computers operate at a fundamental level. </p>
-<p>In modern computers, numeric types typically have a default size of 64 bits. In Julia, they&#39;re defined as:</p>
+<p>In modern computers, numbers typically have a default size of 64 bits. Specifically in Julia, the default types for numbers are:</p>
 <ul>
 <li><p><code>Int64</code> for integers.</p>
 </li>
-<li><p><code>Float64</code> for decimal numbers. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The term &quot;Float&quot; stands for &quot;<a href="https://en.wikipedia.org/wiki/Double-precision_floating-point_format">Floating Point</a>&quot;, and is how computers represent decimal numbers.  </span></span></p>
+<li><p><code>Float64</code> for decimal numbers. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The term &quot;Float&quot; stands for &quot;<a href="https://en.wikipedia.org/wiki/Double-precision_floating-point_format">floating point</a>&quot; and is how computers represent decimal numbers.  </span></span></p>
 </li>
 </ul>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
