--- a/PAGES/02f_tuples/index.html
+++ b/PAGES/02f_tuples/index.html
@@ -2817,8 +2817,8 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
 <p>We continue our exploration of  <em>collections</em>, defined as objects storing multiple elements. Having previously focused on arrays, we&#39;ll now turn our attention to another form of collection known as  <em>tuples</em>. </p>
-<p>The defining characteristic of tuples is their fixed size and immutability. This implies that, once a tuple is created, its elements cannot be added, removed, or modified. While these restrictions might initially seem restrictive, they also bring a performance advantage when working with small collections.</p>
-<p>At this point, we&#39;ll only touch on the basics. A more in-depth exploration of tuples will follow in Part II, after we&#39;ve developed the necessary tools to fully appreciate their relevance.</p>
+<p>The defining characteristic of tuples is their fixed size and immutability. This implies that, once a tuple is created, its elements cannot be added, removed, or modified. While these restrictions might initially seem limiting, they also bring substantial performance gains when working with small collections. </p>
+<p>At this point, we&#39;ll only touch on the basics. A more in-depth exploration of tuples will follow in Part II, after we&#39;ve developed the necessary tools to understand the role of tuples for high performance.</p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Warning!</b> </span>  </div>  <div class=content> <strong>Tuples should only be used when the collection comprises a small number of elements</strong>. Large tuples will result in slow computations at best, or directly trigger fatal errors. For large vectors, you should keep relying on vectors.  </div>  </div>
