--- a/PAGES/05b_immutables/index.html
+++ b/PAGES/05b_immutables/index.html
@@ -2864,9 +2864,9 @@ color: white;
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> Add  (Mutable)</button>
-    <button class="tablink" data-id=""> Remove (Mutable) </button>    
-    <button class="tablink" data-id=""> Add/Remove Immutable </button>    
+    <button class="tablink first_tab active" data-id=""> Add  (Mutable Object)</button>
+    <button class="tablink" data-id=""> Remove (Mutable Object) </button>    
+    <button class="tablink" data-id=""> Add/Remove (Immutable Object) </button>    
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; &#91;3,4&#93;
