--- a/PAGES/05d_initializeVector/index.html
+++ b/PAGES/05d_initializeVector/index.html
@@ -2858,11 +2858,11 @@ x &#61; similar&#40;y&#41;                      # &#96;x&#96; has the same type 
     </div>
   </div>
 </section>
-<section id="creating_vectors" class="scrollspy">
+<section id="creating_vectors_with_given_values" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
-        <h2>Creating Vectors</h2></p>
+        <h2>Creating Vectors with Given Values</h2></p>
 <p>In the following, we present several approaches to creating arrays filled with predefined values. </p>
  <h4> Vectors With Range </h4>
 <p>If our goal is to generate a sequence of values, we can employ the function <code>collect&#40;&lt;range&gt;&#41;</code>. Recall that the syntax for defining ranges is <code>&lt;start&gt;: &lt;steps&gt;: &lt;stop&gt;</code>, where <code>&lt;steps&gt;</code> establishes the gap between elements.</p>
@@ -3883,7 +3883,7 @@ for multiple pics in a row
         </li>
         
         <li>
-          <a href="#creating_vectors" data-offset="-40">Creating Vectors</a>
+          <a href="#creating_vectors_with_given_values" data-offset="-40">Creating Vectors with Given Values</a>
         </li>
         
         <li>
