--- a/PAGES/05g_views/index.html
+++ b/PAGES/05g_views/index.html
@@ -2947,11 +2947,11 @@ x&#91;:&#93; &#61; x .* 10</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="mutation_via_broadcasting" class="scrollspy">
+<section id="mutation_via" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
-        <h2>Mutation Via Broadcasting '=' </h2></p>
+        <h2>Mutation Via .= </h2></p>
 <p>When the goal is to replace each element of a slice with the same scalar value, the previous method can result in excessive <a href="https://en.wikipedia.org/wiki/Boilerplate_code">boilerplate code</a>. This is because the technique always requires a vector matching the number of elements to be replaced.</p>
 <p>To address this, we introduce a more convenient approach based on broadcasting the assignment operator <code>&#61;</code>. Its syntax is <code>x&#91;&lt;indices&gt;&#93; .&#61; &lt;expression&gt;</code>, whose key advantage is that <code>&lt;expression&gt;</code> can be either a  <em>vector</em> or a  <em>scalar</em>. This feature allows for a statement as simple as <code>x&#91;indices&#93; .&#61; &lt;number&gt;</code> to substitute each element of <code>x&#91;indices&#93;</code> with a scalar <code>&lt;number&gt;</code> </p>
 <p>Below, we illustrate the approach by replacing each negative value of <code>x</code> with zero. For comparison, we also implement the operation through the previous section&#39;s method.</p>
@@ -3797,7 +3797,7 @@ for multiple pics in a row
         </li>
         
         <li>
-          <a href="#mutation_via_broadcasting" data-offset="-40">Mutation Via Broadcasting '=' </a>
+          <a href="#mutation_via" data-offset="-40">Mutation Via .= </a>
         </li>
         
         <li>
