--- a/PAGES/02d_strings/index.html
+++ b/PAGES/02d_strings/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2821,7 +2821,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="characters" class="scrollspy section-bg-color">
+<section id="characters" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2861,7 +2861,7 @@ z  &#61; &#39;🐒&#39;       # z equals the character 🐒</code></pre>
     </div>
   </div>
 </section>
-<section id="strings" class="scrollspy">
+<section id="strings" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2884,7 +2884,7 @@ x &#61; &quot;&quot;&quot;Hello, beautiful world&quot;&quot;&quot;</code></pre>
     </div>
   </div>
 </section>
-<section id="string_interpolation" class="scrollspy section-bg-color">
+<section id="string_interpolation" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2936,7 +2936,7 @@ output_text     &#61; &quot;Last year, Messi scored &#36;&#40;number_matches * g
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
