--- a/PAGES/05c_mutation/index.html
+++ b/PAGES/05c_mutation/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2830,7 +2830,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="some_background" class="scrollspy">
+<section id="some_background" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2853,7 +2853,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="assignments_vs_mutations" class="scrollspy section-bg-color">
+<section id="assignments_vs_mutations" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2898,7 +2898,7 @@ x&#91;:&#93; &#61; &#91;0,0&#93;</code></pre>
     </div>
   </div>
 </section>
-<section id="alias_vs_copy" class="scrollspy">
+<section id="alias_vs_copy" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3043,7 +3043,7 @@ x&#91;1&#93; &#61; 0</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
