--- a/PAGES/05d_initializeVector/index.html
+++ b/PAGES/05d_initializeVector/index.html
@@ -2811,18 +2811,18 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
 <p>We continue introducing preliminary concepts for mutations. The previous section distinguished between the use of <code>&#61;</code> for assignments and mutations. Now, we&#39;ll deal with approaches to creating vectors.</p>
-<p>Our presentation starts by outlining the process of initializing vectors, where memory is reserved without assigning initial values. We&#39;ll then discuss how to create vectors filled with predefined values such as zeros or ones. The section concludes by showing how to concatenate multiple vectors into a new one.</p>
+<p>Our presentation starts by outlining the process of initializing vectors, where memory is reserved without assigning initial values. We&#39;ll then discuss how to create vectors filled with predefined values such as zeros or ones. Finally, we show how to concatenate multiple vectors into new ones.</p>
 <p>      </div>
     </div>
   </div>
 </section>
-<section id="initializing_vectors" class="scrollspy section-bg-color">
+<section id="initializing_vectors" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2858,7 +2858,7 @@ x &#61; similar&#40;y&#41;                      # &#96;x&#96; has the same type 
     </div>
   </div>
 </section>
-<section id="creating_vectors_with_given_values" class="scrollspy">
+<section id="creating_vectors_with_given_values" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3077,7 +3077,7 @@ x                &#61; repeat&#40;vector_to_repeat, nr_repetitions&#41;</code></
     </div>
   </div>
 </section>
-<section id="adding_removing_and_replacing_elements_i_stylecolorredoptional" class="scrollspy section-bg-color">
+<section id="adding_removing_and_replacing_elements_i_stylecolorredoptional" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3271,7 +3271,7 @@ y &#61; replace&#40;x, 3 &#61;&gt; 0, 5 &#61;&gt; 1&#41;   # new copy</code></pr
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
