--- a/PAGES/05f_indexing/index.html
+++ b/PAGES/05f_indexing/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2822,7 +2822,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="logical_indexing" class="scrollspy section-bg-color">
+<section id="logical_indexing" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2846,7 +2846,7 @@ y &#61; &#91;true, false, true&#93;</code></pre>
     </div>
   </div>
 </section>
-<section id="operators_and_functions_for_logical_indexing" class="scrollspy">
+<section id="operators_and_functions_for_logical_indexing" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2922,7 +2922,7 @@ y            &#61; x&#91;condition.&#40;x&#41;&#93;</code></pre>
     </div>
   </div>
 </section>
-<section id="logical_indexing_via_in_and" class="scrollspy section-bg-color">
+<section id="logical_indexing_via_in_and" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3060,7 +3060,7 @@ bool_indices &#61; x .∉ Ref&#40;list&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="the_functions_findall_and_filter" class="scrollspy">
+<section id="the_functions_findall_and_filter" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3138,7 +3138,7 @@ z &#61; x&#91;findall&#40;x .&lt; 7&#41;&#93;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
