--- a/PAGES/05g_inplace_operations/index.html
+++ b/PAGES/05g_inplace_operations/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2826,7 +2826,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="mutations_via_collections" class="scrollspy section-bg-color">
+<section id="mutations_via_collections" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2925,7 +2925,7 @@ x&#91;2:3&#93;    &#61; &#91;3.0, 4&#93;     # 3.0 is Float64 but accepts conver
     </div>
   </div>
 </section>
-<section id="mutations_via_for-loops" class="scrollspy">
+<section id="mutations_via_for-loops" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2997,7 +2997,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="mutations_via" class="scrollspy section-bg-color">
+<section id="mutations_via" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3208,7 +3208,7 @@ slice  &#61; 0                  # this creates a new object, it does NOT modify 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
