--- a/PAGES/06e_application01/index.html
+++ b/PAGES/06e_application01/index.html
@@ -2814,7 +2814,7 @@ color: white;
  <div class="note" style="width:62%" id=remarkCodeContent>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">
       <b> Code Script</b> </span>  </div>  <div class=content>     This section&#39;s scripts are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/06e_application01/codeDownload"><strong>here</strong></a>, under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.11.3.  </div>  </div>  <div style="margin-bottom:-2em"></div>
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2837,7 +2837,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
     </div>
   </div>
 </section>
-<section id="describing_the_scenario" class="scrollspy">
+<section id="describing_the_scenario" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2906,7 +2906,7 @@ payrates &#61; rand&#40;2:6, nr_videos&#41;                         # per thousa
     </div>
   </div>
 </section>
-<section id="some_general_information" class="scrollspy section-bg-color">
+<section id="some_general_information" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2971,7 +2971,7 @@ sorted_visits   &#61; visits&#91;indices&#93;</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="boolean_variables" class="scrollspy">
+<section id="boolean_variables" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3038,7 +3038,7 @@ proportion_viral_lucrative &#61; sum&#40;is_viral_lucrative&#41; / sum&#40;is_vi
     </div>
   </div>
 </section>
-<section id="functions_to_represent_tasks" class="scrollspy section-bg-color">
+<section id="functions_to_represent_tasks" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3115,7 +3115,7 @@ specific_days    &#61; stats_subset&#40;visits, payrates, is_day&#41;</code></pr
     </div>
   </div>
 </section>
-<section id="mutating_variables" class="scrollspy">
+<section id="mutating_variables" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3208,7 +3208,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="broadcasting_over_a_list_of_functions_optional" class="scrollspy section-bg-color">
+<section id="broadcasting_over_a_list_of_functions_optional" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3283,7 +3283,7 @@ stats_visits     &#61; NamedTuple&#40;vector_of_tuples&#41;</code></pre> </div><
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
