--- a/PAGES/07c_benchmarks/index.html
+++ b/PAGES/07c_benchmarks/index.html
@@ -2829,7 +2829,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2839,7 +2839,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="time_metrics" class="scrollspy section-bg-color">
+<section id="time_metrics" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2895,7 +2895,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="time_to_first_plot" class="scrollspy">
+<section id="time_to_first_plot" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2910,7 +2910,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="time" class="scrollspy section-bg-color">
+<section id="time" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2935,7 +2935,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="package_benchmarktools" class="scrollspy">
+<section id="package_benchmarktools" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2992,7 +2992,7 @@ x &#61; rand&#40;100&#41;
     </div>
   </div>
 </section>
-<section id="package_chairmarks" class="scrollspy section-bg-color">
+<section id="package_chairmarks" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3025,7 +3025,7 @@ max    34.462 ns</code></pre> </div></div> </div>
     </div>
   </div>
 </section>
-<section id="remark_on_random_numbers_for_benchmarking" class="scrollspy">
+<section id="remark_on_random_numbers_for_benchmarking" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3083,7 +3083,7 @@ y &#61; sum&#40;x&#41;</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="benchmarks_in_perspective" class="scrollspy section-bg-color">
+<section id="benchmarks_in_perspective" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3169,7 +3169,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
