--- a/PAGES/11f_multithread_apply/index.html
+++ b/PAGES/11f_multithread_apply/index.html
@@ -2829,7 +2829,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2842,7 +2842,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="better_to_parallelize_at_the_top" class="scrollspy section-bg-color">
+<section id="better_to_parallelize_at_the_top" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2954,7 +2954,7 @@ x_large  &#61; rand&#40;100_000&#41;</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="the_importance_of_work_distribution" class="scrollspy">
+<section id="the_importance_of_work_distribution" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3079,7 +3079,7 @@ chunk_iter    &#61; enumerate&#40;chunk_indices&#41;    # pairs &#40;i_chunk, ch
     </div>
   </div>
 </section>
-<section id="work_distribution_defining_tasks_through_chunks" class="scrollspy section-bg-color">
+<section id="work_distribution_defining_tasks_through_chunks" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3195,7 +3195,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="parallel_reductions" class="scrollspy">
+<section id="parallel_reductions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3259,7 +3259,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="false_sharing_in_reductions" class="scrollspy section-bg-color">
+<section id="false_sharing_in_reductions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3425,7 +3425,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
