--- a/PAGES/01a_installation/index.html
+++ b/PAGES/01a_installation/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2821,7 +2821,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="installing_julia" class="scrollspy section-bg-color">
+<section id="installing_julia" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2833,7 +2833,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="installing_vs_code" class="scrollspy">
+<section id="installing_vs_code" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2849,7 +2849,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="julias_resources_for_help" class="scrollspy section-bg-color">
+<section id="julias_resources_for_help" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2871,7 +2871,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
     </div>
   </div>
 </section>
-<section id="installing_r_and_python_i_stylecolorredoptional" class="scrollspy">
+<section id="installing_r_and_python_i_stylecolorredoptional" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2900,7 +2900,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
