--- a/PAGES/04c_conditionals/index.html
+++ b/PAGES/04c_conditionals/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2835,7 +2835,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="if-then_statements" class="scrollspy section-bg-color">
+<section id="if-then_statements" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2892,7 +2892,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="if-else_statements" class="scrollspy">
+<section id="if-else_statements" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2961,7 +2961,7 @@ x_absolute_value      &#61; ifelse.&#40;x .≥ 0, x, -x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="if-else-if_statements" class="scrollspy section-bg-color">
+<section id="if-else-if_statements" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3023,7 +3023,7 @@ end</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
