--- a/PAGES/04d_forloops/index.html
+++ b/PAGES/04d_forloops/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2823,7 +2823,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="syntax" class="scrollspy section-bg-color">
+<section id="syntax" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2911,7 +2911,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="iterating_over_indices" class="scrollspy">
+<section id="iterating_over_indices" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3056,7 +3056,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="rules_for_variable_scope_in_for-loops" class="scrollspy section-bg-color">
+<section id="rules_for_variable_scope_in_for-loops" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3135,7 +3135,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="array_comprehensions" class="scrollspy">
+<section id="array_comprehensions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3206,7 +3206,7 @@ y      &#61; &#91;foo&#40;a&#41; for a in x&#93;          # or y &#61; &#91;foo&
     </div>
   </div>
 </section>
-<section id="iterating_over_multiple_objects" class="scrollspy section-bg-color">
+<section id="iterating_over_multiple_objects" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3303,7 +3303,7 @@ y &#61; &#91;index * value for &#40;index,value&#41; in enumerate&#40;x&#41;&#93
     </div>
   </div>
 </section>
-<section id="iterating_over_functions" class="scrollspy">
+<section id="iterating_over_functions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3347,7 +3347,7 @@ descriptive&#40;vector,list&#41; &#61; &#91;foo&#40;vector&#41; for foo in list&
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
