--- a/PAGES/06c_pipes/index.html
+++ b/PAGES/06c_pipes/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2822,7 +2822,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="let_blocks" class="scrollspy">
+<section id="let_blocks" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2911,7 +2911,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="pipes" class="scrollspy section-bg-color">
+<section id="pipes" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3066,7 +3066,7 @@ output &#61; @pipe a            |&gt;
     </div>
   </div>
 </section>
-<section id="function_composition_optional" class="scrollspy">
+<section id="function_composition_optional" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3186,7 +3186,7 @@ output       &#61; &#91;foo&#40;a&#41; for foo in compositions&#93;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
