--- a/PAGES/06d_functionsVectors/index.html
+++ b/PAGES/06d_functionsVectors/index.html
@@ -2811,17 +2811,17 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>When working in Julia, you&#39;ll often need to manipulate and analyze vectors. This section provides an overview of essential functions for conducting these tasks, including sorting, identifying unique elements, counting occurrences, and ranking data. Our ultimate goal is to apply these functions in a practical context, as we&#39;ll do in the next section.</p>
+<p>This section provides an overview of essential functions for manipulating vectors, including sorting, identifying unique elements, counting occurrences, and ranking data. Our ultimate goal is to apply these functions in a practical context, which we&#39;ll do in the next section.</p>
 <p>      </div>
     </div>
   </div>
 </section>
-<section id="sorting_vectors" class="scrollspy section-bg-color">
+<section id="sorting_vectors" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2914,7 +2914,7 @@ y      &#61; sort&#40;x, by &#61; foo&#41;      # same as sort&#40;x, by &#61; x
     </div>
   </div>
 </section>
-<section id="retrieving_indices_of_sorted_elements" class="scrollspy">
+<section id="retrieving_indices_of_sorted_elements" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3081,7 +3081,7 @@ days_by_failures &#61; days&#91;index&#93;                     # days sorted by 
     </div>
   </div>
 </section>
-<section id="removing_duplicates" class="scrollspy section-bg-color">
+<section id="removing_duplicates" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3168,7 +3168,7 @@ occurrences &#61; collect&#40;values&#40;y&#41;&#41;</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="rounding_numbers" class="scrollspy">
+<section id="rounding_numbers" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3231,7 +3231,7 @@ ceil&#40;x, sigdigits&#61;2&#41;             # 460.0</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="rankings" class="scrollspy section-bg-color">
+<section id="rankings" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3316,7 +3316,7 @@ y &#61; sortperm&#40;x&#41;</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="extrema_maximum_and_minimum" class="scrollspy">
+<section id="extrema_maximum_and_minimum" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3380,7 +3380,7 @@ z &#61; max&#40;x,y&#41;</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
