--- a/PAGES/07a_overview/index.html
+++ b/PAGES/07a_overview/index.html
@@ -2829,7 +2829,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="13633231208144796923" class="scrollspy section-bg-color">
+<section id="13633231208144796923" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2868,7 +2868,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
