--- a/PAGES/08c_TS-scalarsVectors/index.html
+++ b/PAGES/08c_TS-scalarsVectors/index.html
@@ -2829,7 +2829,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2839,7 +2839,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="types_of_scalars_and_vectors" class="scrollspy">
+<section id="types_of_scalars_and_vectors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2896,7 +2896,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="type_stability_with_scalars" class="scrollspy section-bg-color">
+<section id="type_stability_with_scalars" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2970,7 +2970,7 @@ foo&#40;1, 2.5&#41;         # type UNSTABLE -&gt; &#96;a * i&#96; is either &#96
     </div>
   </div>
 </section>
-<section id="type_stability_with_vectors" class="scrollspy">
+<section id="type_stability_with_vectors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3110,7 +3110,7 @@ sum&#40;x6&#41;             # type UNSTABLE -&gt; &#96;sum&#96; must consider al
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
