--- a/PAGES/08h_TS-gotchas/index.html
+++ b/PAGES/08h_TS-gotchas/index.html
@@ -2832,7 +2832,7 @@ color: white;
  <div class="note" style="width:62%" id=remarkCodeContent>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">
       <b> Code Script</b> </span>  </div>  <div class=content>     This section&#39;s scripts are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/08h_TS-gotchas/codeDownload"><strong>here</strong></a>, under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.11.3.  </div>  </div>  <div style="margin-bottom:-2em"></div>
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2842,7 +2842,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="gotcha_1_integers_and_floats" class="scrollspy section-bg-color">
+<section id="gotcha_1_integers_and_floats" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2917,7 +2917,7 @@ end
     </div>
   </div>
 </section>
-<section id="gotcha_2_collections_of_collections" class="scrollspy">
+<section id="gotcha_2_collections_of_collections" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2960,7 +2960,7 @@ end
     </div>
   </div>
 </section>
-<section id="gotcha_3_barrier_functions" class="scrollspy section-bg-color">
+<section id="gotcha_3_barrier_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3018,7 +3018,7 @@ foo&#40;data&#41; &#61; operation&#33;&#40;data&#91;2&#93;&#41;
     </div>
   </div>
 </section>
-<section id="gotcha_4_inference_is_by_type_not_by_value" class="scrollspy">
+<section id="gotcha_4_inference_is_by_type_not_by_value" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3073,7 +3073,7 @@ end
     </div>
   </div>
 </section>
-<section id="gotcha_5_variables_as_default_values_of_keyword_arguments" class="scrollspy section-bg-color">
+<section id="gotcha_5_variables_as_default_values_of_keyword_arguments" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3158,7 +3158,7 @@ const β &#61; 1
     </div>
   </div>
 </section>
-<section id="gotcha_6_closures_can_easily_introduce_type_instabilities" class="scrollspy">
+<section id="gotcha_6_closures_can_easily_introduce_type_instabilities" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3605,7 +3605,7 @@ end
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
