--- a/PAGES/09e_preallocations/index.html
+++ b/PAGES/09e_preallocations/index.html
@@ -2829,7 +2829,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2845,7 +2845,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="initializing_vectors" class="scrollspy">
+<section id="initializing_vectors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2976,7 +2976,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="pre-allocating_vectors_in_nested_for-loops" class="scrollspy section-bg-color">
+<section id="pre-allocating_vectors_in_nested_for-loops" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3138,7 +3138,7 @@ calling_foo_in_a_loop&#40;output,x&#41; &#61; &#91;sum&#40;foo&#33;&#40;output,x
     </div>
   </div>
 </section>
-<section id="pre-allocations_for_intermediate_steps" class="scrollspy">
+<section id="pre-allocations_for_intermediate_steps" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3347,7 +3347,7 @@ calling_foo_in_a_loop&#40;x, output, temp&#41; &#61; &#91;foo&#33;&#40;x, output
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
