--- a/PAGES/10f_simd_branchless/index.html
+++ b/PAGES/10f_simd_branchless/index.html
@@ -2829,7 +2829,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="branches" class="scrollspy section-bg-color">
+<section id="branches" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2841,7 +2841,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="type_stability_and_bounds_checking_as_avoidable_conditions" class="scrollspy">
+<section id="type_stability_and_bounds_checking_as_avoidable_conditions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2966,7 +2966,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="approaches_to_conditional_statements" class="scrollspy section-bg-color">
+<section id="approaches_to_conditional_statements" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2978,7 +2978,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="ifelse_vs_if" class="scrollspy">
+<section id="ifelse_vs_if" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3100,7 +3100,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="ternary_operators" class="scrollspy section-bg-color">
+<section id="ternary_operators" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3263,7 +3263,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="scenarios_under_which_each_approach_is_better" class="scrollspy">
+<section id="scenarios_under_which_each_approach_is_better" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3391,7 +3391,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="vector_of_conditions" class="scrollspy section-bg-color">
+<section id="vector_of_conditions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3500,7 +3500,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="algebraic_operations_as_compound_conditions" class="scrollspy">
+<section id="algebraic_operations_as_compound_conditions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3672,7 +3672,7 @@ foo&#40;x,y&#41;       &#61; @. ifelse&#40;Bool&#40;1 - &#33;&#40;x&gt;0.3&#41; 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
