--- a/PAGES/11b_multithread_intro/index.html
+++ b/PAGES/11b_multithread_intro/index.html
@@ -2829,7 +2829,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2840,7 +2840,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="nature_of_computations" class="scrollspy">
+<section id="nature_of_computations" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2881,7 +2881,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="tasks_and_threads" class="scrollspy section-bg-color">
+<section id="tasks_and_threads" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2930,7 +2930,7 @@ B &#61; @task job_B&#40;1&#41;      # B&#39;s task takes 1 second</code></pre> <
     </div>
   </div>
 </section>
-<section id="sequential_and_concurrent_computations" class="scrollspy">
+<section id="sequential_and_concurrent_computations" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3047,7 +3047,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="multithreading" class="scrollspy section-bg-color">
+<section id="multithreading" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3132,7 +3132,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="the_importance_of_waiting_for_the_results" class="scrollspy">
+<section id="the_importance_of_waiting_for_the_results" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3263,7 +3263,7 @@ println&#40;&quot;the value stored in &#96;output&#96; is &#36;&#40;output&#41;&
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 16, 2025 
+          © Martin Alfaro <br>Last Modified March 17, 2025 
       </span> 
   </div> 
 </footer>
